[package]
name = "lox-lang"
version = "0.1.0"
authors = ["Folyd <lyshuhow@gmail.com>"]
edition = "2021"
publish = false

[dependencies]
gc-arena = { version = "0.5.3" }
num_enum = "0.7.3"
ustr = "1.0.0"

[features]
# Enable debug features.
debug = []

[dev-dependencies]
regex = "1.11"
test-generator = "0.3"
